# DHBWKA-KnowledgeBasedSystems

./: .gitignore  README.md
NaiveBayes-Cpp/: CMakeLists.txt  Instance.cc  Instance.h  InstanceReader.cc  InstanceReader.h  Main.cc  Main.h  NaiveBayesNet.cc  NaiveBayesNet.h  Nodes.cc  Nodes.h  SConstruct
NaiveBayes-Cpp/data/: cartheft.txt  folienbeispiel.txt
NaiveBayes-Python/: NaiveBayesClassifierCarExample.py
NeuralNetworks/GeneralMlnnLearningFramework/: CMakeLists.txt  MlnnFromFileApplication.cpp  MlnnFromFileApplication.h  ex3Data1.txt  ex3Data2.txt
NeuralNetworks/InstallTest/: CMakeLists.txt  Main.cc
NeuralNetworks/PerceptronApplications/: CMakeLists.txt  PerceptronApplications.cc  PerceptronLearning.cc  PerceptronLearning.h  PerceptronLearningFramework.cc  PerceptronLearningFramework.h  mystery.txt  orData.txt  xorData.txt
NeuralNetworks/SimpleMlnnApplication/: CMakeLists.txt  Ex3Mlnn.cc  Ex3Mlnn.h  MlnnEx3Application.cc  MlnnEx3Application.h  MlnnFromFileApplication.cc  MlnnXorApplication.cc  XorMlnn.cc  XorMlnn.h  xorData2.txt
NeuralNetworks/TwoclassMlnnLearningFramework/: MlnnFromFileApplication.cpp  MlnnFromFileApplication.h  andData.txt
